<resources>
    <string name="app_name">PamsimasApps</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="password">Password</string>
    <string name="masukan_kata_sandi">Masukan Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="silahkan_masukkan_email_yang_terhubung_dengan_akun_pamsimas_dan_kami_akan_mengirimkan_email_untuk_pemulihan_kata_sandi">Silahkan masukkan email yang terhubung dengan akun Pamsimas dan kami akan mengirimkan email untuk pemulihan kata sandi</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tentang_npamsimas">Tentang\nPamsimas</string>
    <string name="laporan_nkeuangan">Laporan\nKeuangan</string>
    <string name="bayar_niuran">Bayar\nIuran</string>
    <string name="input_nmeteran">Input\nMeteran</string>
    <string name="keluar">Keluar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan_lanjutkan"><![CDATA[Simpan & Lanjutkan]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_kegiatan">Nama Kegiatan</string>
    <string name="tgl_kegiatan">Tanggal Kegiatan</string>
    <string name="desc_kegiatan">Deskripsi Kegiatan</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_kegiatan_baru">Tambah Kegiatan Baru</string>
    <string name="beranda">Beranda</string>
    <string name="cari">Cari</string>
    <string name="akun">Akun</string>
    <string name="loading">Loading...</string>
    <string name="silahkan_masukkan_email_dan_password_untuk_melanjutkan_ke_aplikasi_pamsimas">Silahkan masukkan email dan password untuk melanjutkan ke aplikasi Pamsimas</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="silahkan_lengkapi_form_dibawah_untuk_melanjutkan_membuat_akun">Silahkan lengkapi form dibawah untuk melanjutkan membuat akun</string>
    <string name="pamid">PAMID</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="kegiatan_pamsimas">Kegiatan Pamsimas</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="pelanggan_aktif">Pelanggan Aktif</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="kata_sandi_admin_akan_digunakan_untuk_n_memverifikasi_keamanan_ketika_melakukan_transaksi">Kata sandi admin akan digunakan untuk\n memverifikasi keamanan ketika melakukan transaksi</string>
    <string name="tanggal_kegiatan">Tanggal Kegiatan</string>
    <string name="nik">NIK</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="untuk_saat_ini_anda_belum_terdaftar_atau_belum_mempunyai_akun_untuk_login_silahkan_untuk_melakukan_pendaftaran">Untuk saat ini anda belum terdaftar atau belum mempunyai akun untuk login. Silahkan untuk melakukan pendaftaran</string>
    <string name="tunggu_sebentar">Tunggu Sebentar...</string>
    <string name="akun_anda_belum_diverifikasi_oleh_pihak_pamsimas">Akun anda belum diverifikasi oleh pihak Pamsimas</string>
    <string name="pin_pengguna">PIN Pengguna</string>
    <string name="confirm_pin_pengguna">Konfirmasi PIN Pengguna</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ganti_pin">Ganti PIN Admin</string>
    <string name="pin_lama">PIN Lama</string>
    <string name="pin_baru">PIN Baru</string>
    <string name="confirm_pin_baru">Konfirmasi PIN Baru</string>
    <string name="tambahkan_kegiatan">Tambahkan Kegiatan</string>
    <string name="reset_password">Reset Kata Sandi</string>
    <string name="tambah_pelanggan_baru">Tambah Pelanggan Baru</string>
    <string name="input_meteran">Input Meteran</string>
    <string name="detail_pelanggan">Detail Pelanggan</string>
    <string name="informasi_pelanggan">Informasi Pelanggan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="provinsi">Provinsi</string>
    <string name="kodepos">Kode Pos</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="riwayat_pemakaian">Riwayat Pemakaian</string>
    <string name="tentang_pamsimas">Tentang Pamsimas</string>
    <string name="kotakab">Kota atau Kabupaten</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="pin_dibutuhkan">PIN Dibutuhkan</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="stand_awal">Stand Awal (M³)</string>
    <string name="stand_akhir">Stand Akhir (M³)</string>
    <string name="kelainan">Kelainan</string>
    <string name="keterangan">Keterangan</string>
    <string name="waktu">Waktu</string>
    <string name="filter">Filter</string>
    <string name="pilih">Pilih</string>
    <string name="cari_pelanggan">Cari Pelanggan</string>
    <string name="iuran_bulanan">Iuran Bulanan</string>
    <string name="bayar_tagihan">Bayar Tagihan</string>
    <string name="option">Option</string>
    <string name="edit_pelanggan">Edit Pelanggan</string>
    <string name="berhenti_berlangganan">Berhenti Berlangganan</string>
    <string name="laporan_keuangan">Laporan Keuangan</string>
    <string name="mohon_ditunggu">Mohon Ditunggu...</string>
    <string name="tambah_laporan">Tambah Laporan Baru</string>
    <string name="ringkasan_keuangan">Ringkasan Keuangan</string>
    <string name="tambah">Tambah</string>
    <string name="tanggal_input_laporan">Tanggal Tambah Laporan</string>
</resources>