<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.dashboard.profile.editpin.EditPinFragment">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/border"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        style="@style/TextTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/ganti_pin"
        app:layout_constraintStart_toEndOf="@+id/ic_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Update PIN Admin"
        android:textColor="@color/hitam"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/kata_sandi_admin_akan_digunakan_untuk_n_memverifikasi_keamanan_ketika_melakukan_transaksi"
        android:textColor="@color/hitam"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_first"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:focusableInTouchMode="true"
        android:hint="@string/pin_lama"
        android:textColorHint="@color/abu"
        app:expandedHintEnabled="false"
        app:placeholderText="Masukkan pin lama"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/border"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/abu"
        app:hintTextAppearance="@style/hint_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pin_lama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="number"
            android:maxLength="4"
            android:paddingHorizontal="24dp"
            android:textColor="@color/abu"
            android:textColorHint="@color/abu"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_second"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:focusableInTouchMode="true"
        android:hint="@string/pin_baru"
        android:textColorHint="@color/abu"
        app:expandedHintEnabled="false"
        app:placeholderText="Masukkan pin baru"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/border"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/abu"
        app:hintTextAppearance="@style/hint_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_first">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pin_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="number"
            android:maxLength="4"
            android:paddingHorizontal="24dp"
            android:textColor="@color/abu"
            android:textColorHint="@color/abu"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_third"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_pin_baru"
        android:textColorHint="@color/abu"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/border"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/abu"
        app:hintTextAppearance="@style/hint_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_second">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pin_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="number"
            android:maxLength="4"
            android:paddingHorizontal="24dp"
            android:textColor="@color/abu"
            android:textColorHint="@color/abu"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        style="@style/ButtonStyle"
        android:text="@string/simpan_lanjutkan"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

